# advent-of-code

./: README.md
2017/day/1/: Cargo.toml  problem.txt
2017/day/1/src/: main.rs
2017/day/10/: Cargo.toml  problem.txt
2017/day/10/src/: main.rs
2017/day/12/: Cargo.toml  problem.txt
2017/day/18/: Cargo.toml  problem.txt
2017/day/19/: Cargo.toml  problem.txt
2017/day/2/: Cargo.toml  problem.txt
2017/day/20/: Cargo.toml  problem.txt
2017/day/3/: Cargo.toml  problem.txt
2017/day/4/: Cargo.toml  problem.txt
2017/day/5/: Cargo.toml  problem.txt
2017/day/6/: Cargo.toml  problem.txt
2017/day/7/: Cargo.toml  problem.txt
2017/day/8/: Cargo.toml  problem.txt
2017/day/9/: Cargo.toml  problem.txt
2018/: Cargo.toml
2019/: Cargo.toml
2019/src/: computer.rs  input.rs  lib.rs  point.rs
2022/: Cargo.toml  README.md  gleam.toml  manifest.toml
2022/src/days/: day_1.gleam  day_10.gleam  day_2.gleam  day_3.gleam  day_4.gleam  day_5.gleam  day_6.gleam  day_8.gleam
2022/test/: day_10_test.gleam  day_8_test.gleam
2023/: day11.rb  day2.rb  day3.rb  day8.rb
2023/day1/: README.md  day1.2.awk  day1.2.rev.awk  day1.2.sh  day1.2.zsh  day1.sh  day1.zsh
2023/day12/src/: main.rs
2023/day13/src/: main.rs
2023/day4/src/: main.rs
2023/day5/src/: main.rs
2023/day6/src/: main.rs
2023/day7/: Makefile  compile_commands.json  day7.cpp
2023/day7/src/: main.rs
2023/day9/src/: main.rs
2023/input/: day11.sample  day12.txt  day3.sample  day4.sample  day4.txt  day6.sample  day7.sample  day8.sample
2024/: Cargo.toml
2024/src/: day1.rs  main.rs
(+12 files in other folders)
