[package]
name = "advent-of-code"
version = "0.1.0"
authors = ["Wesley Moore <wes@wezm.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.8"
regex = { version = "1.0", default-features = false, features = ["std", "unicode-perl"] }